# agent_orchestration

scaling_langgraph/: main.py  pyproject.toml
web_research/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  lg_redis_test.py  pyproject.toml  test.ipynb
web_research/app/: README.md  config.py  main.py  models.py  test2.ipynb  test2.py
web_research/app/api/: routes.py
web_research/app/core/: README.md  agent.py  graph.py  langgraph_agent.py  llm.py  llm_response_models.py  state_graph.py  utils.py
web_research/app/core/prompts/: planner_prompt.py  quality_check_prompt.py  search_gather_prompt.py  synthesis_citation_prompt.py
web_research/app/core/tools/: arxiv_search.py  tavily_search.py  webscraper.py  wikipedia_search.py
web_research/app/models/: llm_response_models.py  models.py
web_research/app/prompts/: search_gather_prompt.py  synthesis_citation_prompt.py
web_research/app/services/: cache.py  checkpointer.py  redis_client.py
web_research/app/utils/: config.py  helper.py
web_research/app/workers/: celery_app.py
web_research/frontend/: streamlit_app.py
web_research/frontend/.streamlit/: config.toml
web_research/frontend/pages/: 1_history.py  1_settings.py  2_about.py
web_research/frontend/utils/: helper.py
web_research/prompts/: planner_prompt.py  quality_check_prompt.py
with_langgraph/: .gitignore  LC.ipynb  basic_chatbot.py  basic_toolcall.py  docker-compose.yml  graph.ipynb  logging.txt  main.py  pyproject.toml  streaming_events.ipynb  websearch_chatbot_inmemory_checkpointer.py  websearch_chatbot_redis.py
with_langgraph/HIL/: cmd_interrupt.ipynb  multiturn_convo.py  tool_approval.ipynb
with_langgraph/redis_data/: dump.rdb
