[project]
name = "scaling-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.121.0",
    "langchain>=1.0.5",
    "langchain-core>=1.0.4",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.2",
    "pydantic>=2.12.4",
    "pygame>=2.6.1",
]
