[project]
name = "web-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.3.0",
    "asyncio>=4.0.0",
    "celery>=5.5.3",
    "fastapi[standard]>=0.121.1",
    "langchain>=1.0.5",
    "langchain-core>=1.0.4",
    "langchain-ollama>=1.0.0",
    "langchain-tavily>=0.2.13",
    "langgraph>=1.0.2",
    "loguru>=0.7.3",
    "pydantic-settings>=2.11.0",
    "redis>=7.0.1",
    "wikipedia>=1.4.0",
]
