[project]
name = "with-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grandalf>=0.8",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.0.1",
    "langchain-ollama>=1.0.0",
    "langchain-tavily>=0.2.13",
    "langgraph>=1.0.2",
    "langsmith>=0.4.40",
    "msgpack>=1.1.2",
    "python-dotenv>=1.2.1",
    "redis>=7.0.1",
]
